adjust to kipukas about articles

--- a/_includes/hamburger_menu.html
+++ b/_includes/hamburger_menu.html
@@ -8,7 +8,7 @@
     <!-- encodeURIComponent should be used later to navigate to the pdf after a ? in the URL once we have more PDFs to link to -->
     <div><a href="/recipes" class="self-center p-2 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">View Item Recipes</a></div>
     <div><a href="/privacy_policy" class="self-center p-2 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">Privacy Policy</a></div>
-    <div><a href="/about_the_binder" class="self-center p-2 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">About the Binder</a></div>
+    <div><a href="/about_articles" class="self-center p-2 text-center text-xl text-kip-drk-goldenrod rounded-lg hover:bg-amber-100 active:bg-amber-100">About Kipukas</a></div>
 </div>
 
 <div class="py-3 px-3 flex flex-initial justify-end content-center self-center">
