--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -37,8 +37,8 @@ layout: default
     <div class="flex-1 grid grid-cols-1 text-kip-drk-sienna text-justify leading-tight h-fit min-h-screen scroll-smooth">
       <p class="text-2xl relative top-0 md:text-4xl py-5 place-self-center text-center text-wrap">{{ page.title }}</p>
       {{ content }}
-      <p class="font-hairline text-slate-200 text-sm mt-6">{{ page.promotion }}</p>
-      <p class="font-hairline text-slate-300 text-xs italic">{{ page.promotion_conditions }}</p>
+      <p class="font-hairline text-slate-200 text-sm mt-6 place-self-center text-center text-wrap">{{ page.promotion }}</p>
+      <p class="font-hairline text-slate-300 text-xs italic place-self-center text-center text-wrap">{{ page.promotion_conditions }}</p>
     </div>
   </div>
 </template>
