--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -5,6 +5,7 @@ layout: default
   {% include toolbar.html
     qr_scanner=true
     type_matchup=true
+    multiplayer=true
     damage_tracker=true
     showCardInfo=true
     lastPage=true
