--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/output.css' | relative_url }}">
+    <link rel="preload" href="/manifest.json" as="fetch" crossorigin="anonymous">
     <link rel="manifest" href="/manifest.json">
     
     <!--favicon code realfavicongenerator.net-->
