--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,17 +2,17 @@
     
     <div class="flex basis-full md:hidden break-after-right md:break-after-avoid transition hover:scale-95 active:scale-95" x-transition x-show="top">
       <a href="./" class="flex flex-1 place-content-center md:hidden h-32 w-64" title="Binder Home" x-transition x-show="top">
-        <img class="h-32 w-64" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection"></img>
+        <img class="h-32 w-64" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection" fetchpriority="high"></img>
       </a>
     </div>
     <div class="hidden md:block lg:hidden break-after-avoid transition hover:scale-95 active:transform-none" x-transition x-show="top">
       <a href="./" class="hidden md:block h-32 w-64" title="Binder Home">
-        <img class="h-32 w-64" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection"></img>
+        <img class="h-32 w-64" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection" fetchpriority="high"></img>
       </a>
     </div>
     <div class="hidden lg:block break-after-avoid transition hover:scale-95 active:transform-none">
       <a href="./" class="hidden md:block h-32 w-64" title="Binder Home">
-        <img class="h-32 w-64" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection"></img>
+        <img class="h-32 w-64" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection" fetchpriority="high"></img>
       </a>
     </div>
   
