--- a/_includes/toolbar.html
+++ b/_includes/toolbar.html
@@ -19,7 +19,7 @@ background_color
 {% if include.logo %}
 <div class="w-screen h-fit z-0 justify-center flex place-items-center mb-2">
   <a href="./" class="w-64" title="Binder Home">
-    <img class="h-32 w-64 transition hover:scale-95 active:transform-none" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection"></img>
+    <img class="h-32 w-64 transition hover:scale-95 active:transform-none" src="/assets/utility_images/kipukas_complete_card_collection.svg" alt="Kipukas Complete Card Collection" fetchpriority="high"></img>
   </a>
 </div>
 {% endif %}
