--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -4,7 +4,7 @@ layout: default
 <div x-data="{ showCardInfo: true, landscape: {% if page.landscape == true %}true{% else %}false{% endif %} }">
   {% include toolbar.html
     qr_scanner=true
-    type_matchup=true
+    local_fists_tool=true
     multiplayer=true
     damage_tracker=true
     showCardInfo=true
