--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -5,6 +5,7 @@ layout: default
   {% include toolbar.html
     qr_scanner=true
     local_fists_tool=true
+    multiplayer_fists_tool=true
     multiplayer=true
     damage_tracker=true
     showCardInfo=true
