--- a/_layouts/card.html
+++ b/_layouts/card.html
@@ -11,6 +11,7 @@ layout: default
     showCardInfo=true
     lastPage=true
     turn_tracker=true
+    multiplayer_turn_tool=true
     goHome=true
     base_fill='fill-slate-200'
     base_stroke='stroke-slate-200'
