--- a/_includes/toolbar.html
+++ b/_includes/toolbar.html
@@ -99,6 +99,15 @@ background_color
         %}
     {% endif %}
 
+    {% if include.multiplayer_turn_tool %}
+        {% include multiplayer_turn_tool.html
+          svgClass='h-12 w-12 z-auto fill-transparent stroke stroke-2 hover:stroke-kip-red active:stroke-kip-drk-sienna'
+          menuClass=anchor-menu
+          base_stroke=base_stroke
+          base_fill=base_fill
+        %}
+    {% endif %}
+
     {% if include.multiplayer %}
       {% capture cardSlugMP %}{{ page.permalink | remove: '/' }}{% endcapture %}
       {% include multiplayer.html
